--- a/static/styles.css
+++ b/static/styles.css
@@ -17,8 +17,9 @@ body, html {
           flex-direction: column;
 }
 
-h1, span, a {
+h1, span, a, div, label {
   text-align: center;
+  font-family: "Petrona";
 }
 
 h1 {
@@ -36,38 +37,68 @@ form {
           justify-content: center;
 }
 
+.registers .block:nth-child(odd) {
+  background-color: #23162d;
+}
+
+.registers .block:nth-child(even) {
+  background: #3c2b75;
+}
+
 .block {
   width: 80%;
+  margin: 0rem auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.block > * {
+  border-left: 3px solid black;
+  border-bottom: 3px solid black;
+  color: white;
+  font-weight: lighter;
+}
+
+.block .index {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 0px;
+          flex: 1 0 0;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: darkgrey;
-}
-
-.block > * {
-  margin-left: 0.3rem;
-}
-
-.block .index {
-  background-color: red;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 0px;
-          flex: 1 0 0;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 1.5rem;
 }
 
 .block .hashes {
-  background-color: green;
-  -webkit-box-flex: 2;
-      -ms-flex: 2 0 0px;
-          flex: 2 0 0;
+  -webkit-box-flex: 8;
+      -ms-flex: 8 0 0px;
+          flex: 8 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .block .feature {
-  background-color: blue;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 0px;
-          flex: 1 0 0;
+  padding: 0.2rem;
+  -webkit-box-flex: 3;
+      -ms-flex: 3 0 0px;
+          flex: 3 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -82,7 +113,13 @@ form {
   width: 100%;
 }
 
-.block .hash:first-child, .block .title {
-  background-color: darkgoldenrod;
+.block .title {
+  text-align: center;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.block .hash {
+  font-size: 0.8rem;
 }
 /*# sourceMappingURL=styles.css.map */
