--- a/static/styles.css
+++ b/static/styles.css
@@ -5,23 +5,6 @@
   padding: 0;
 }
 
-body, html {
-  height: 100%;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-h1, span, a, div, label {
-  text-align: center;
-  font-family: "Petrona";
-}
-
 h1 {
   margin: 0 auto;
 }
@@ -95,6 +78,7 @@ form {
 }
 
 .block .feature {
+  overflow-x: hidden;
   padding: 0.2rem;
   -webkit-box-flex: 3;
       -ms-flex: 3 0 0px;
